Keep pgn import button visible on click - closes #11490, fixes #11478
So that it sticks around until the click event with
`prefers-reduce-motion: reduce` i.e. without the transition

--- a/ui/analyse/css/_analyse.free.scss
+++ b/ui/analyse/css/_analyse.free.scss
@@ -19,7 +19,7 @@
       @include transition;
     }
 
-    textarea:focus ~ .action {
+    :focus-within .action {
       visibility: visible;
     }
   }
